  em1010.pl:
  - Make difference between sensors 1..4 and 5..
  - Checked values for sensor 5 (cur.energy + cur.power) - ok
  - Checked values for sensor 5 cur.energy is ok, cur.power still off.
    Correction factor needs to be determined.
  - setTime: Without argument, now the current time of the PC is used.
  - setRperKW: Factor of 10 required, 75 U/kWh -> 750.

- Pest, Tue Apr 10 20:31:22 MEST 2007
  em1010.pl:
  - Introduced new double-word function (dw)
  - getDevStatus: energy values kWh/h, kWh/d, total.

- Rudi Sat Apr 14 10:34:36 MEST 2007
  final documentations, release 4.0. Tagged as FHEM_4_0

- Pest, Sat Apr 14 14:21:00 MEST 2007
  - doc: linux.html (private udev-rules, not 50-..., ATTRS)

- Pest, Sun Apr 15 14:54:30 MEST 2007
  - doc: fhem.pl and commandref.html (notifyon -> notify, correction of examples)

- Rudi, Tue Apr 24 08:10:43 MEST 2007
  - feature: modify command added. It helps change e.g. only the time component
    for an at command, without deleting and creating it again and then
    reapplying all the attributes.
  - feature: the "-" character is disallowed in defined names. Use dot (.) or _
    instead.  The - is used to separate ranges in the set command.

- Rudi, Sun May 27 12:51:52 MEST 2007
  - Archiving FileLogs. Added fhemweb.pl (pgm2) code, to show logs from the
    archive directory. See the attributes archivedir/archivecmd.
  - Added EM1010PC suppoort (right now only with EM1000WZ). Support added
    for displaying logs in the fhemweb.pl (webfrontends/pgm2)

- Pest, Mon May 28 19:39:22 MEST 2007
  - Added 62_EMEM.pm to support EM1000-EM devices.
  - doc: Update of commandref.htm (typos and EMEM).

- Pest, Mon May 29 00:07:00 MEST 2007
  - check-in changes of 60_EM.pm to make EMEM work.

- Mon Jun  4 08:23:43 MEST 2007
  - Small changes for EM logging

- Pest Jun 10, 23:16:23 MEST 2007
  - Set wrong values in 62_EMEM to -1

- Pest Jun 12, 21:33:00 MEST 2007
  - in 62_EMEM.pm: added energy_today and energy_total